--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
@@ -12,28 +15,33 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <nav class="header-navigation">
+<header class="header">
+    <div class="container header-flex">
+        <nav class="header-navigation nav-flex">
             <a href="./index.html" class="header-logo link"><span class="header-partlogo">Web</span>Studio</a>
-        <ul class="header-list list"> 
-            <li class="header-item"> <a href="./index.html" class="header-link link">Studio</a></li> 
-            <li class="header-item"> <a href="./portfolio.html" class="header-link link">Portfolio</a></li>
-            <li class="header-item"> <a href="" class="header-link link">Contacts</a></li>
-        </ul>
+            <ul class="header-first list">
+                <li class="header-item"> <a href="./index.html" class="header-link link">Studio</a></li>
+                <li class="header-item"> <a href="./portfolio.html" class="header-link link">Portfolio</a></li>
+                <li class="header-item"> <a href="" class="header-link link">Contacts</a></li>
+            </ul>
         </nav>
-        <address> 
+        <address>
             <ul class="header-list list">
-            <li> <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a class="header-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a> </li>
+                <li class="header-address"> <a class="header-mail link"
+                        href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                <li class="header-address"> <a class="header-tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
-    </header>
+    </div>
+</header>
     <main>
         <section class="hero">
             <h1 class="title-hero">Effective Solutions for Your Business</h1>
             <button class="button-hero" type="button">Order Service</button>
         </section>
         <section class="about">
+            <div class="container">
        <h2 class="visually-hidden">Section2</h2>
             <ul class="about-list list">
             <li class="about-item">
@@ -61,39 +69,44 @@
                 </p>
             </li>
         </ul>
+            </div>
         </section>
         <section class="activity"> 
+            <div class="container">
         <h2 class="activity-title">What are we doing</h2>
         <ul class="activity-list list">
             <li class="activity-item"><img src="./images/img1.jpg" alt="monitor" width="360"></li>
             <li class="activity-item"><img src="./images/img2.jpg" alt="screen" width="360"></li>
             <li class="activity-item"><img src="./images/img3.jpg" alt="phone" width="360"></li>
         </ul>
+        </div>
         </section>
          <section class="team">
+            <div class="container">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
             <li class="team-item">
                 <img src="./images/img(4).jpg" alt="member of team" width="264">
-                <h3 class="team-subtitle">Mark Guerrero</h3> 
-                <p class="team-text">Product Designer</p>
+                <div class="part-card"><h3 class="team-subtitle">Mark Guerrero</h3> 
+                <p class="team-text">Product Designer</p></div>
             </li>
             <li class="team-item">
                 <img src="./images/img(1)(1).jpg" alt="member of team" width="264">
-                <h3 class="team-subtitle">Tom Ford</h3>
-                <p class="team-text">Frontend Developer</p>
+                <div class="part-card"><h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p></div>
             </li>
             <li class="team-item">
                 <img src="./images/img(2)(1).jpg" alt="member of team" width="264">
-                <h3 class="team-subtitle">Camila Garcia</h3> 
-                <p class="team-text">Marketing</p>
+                <div class="part-card"><h3 class="team-subtitle">Camila Garcia</h3> 
+                <p class="team-text">Marketing</p></div>
             </li>
             <li class="team-item">
                 <img src="./images/img(3)(1).jpg" alt="member of team" width="264">
-                <h3 class="team-subtitle">Daniel Wilson</h3> 
-                <p class="team-text">UI Designer</p>
+                <div class="part-card"><h3 class="team-subtitle">Daniel Wilson</h3> 
+                <p class="team-text">UI Designer</p></div>
             </li>
         </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
