--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 </header>
     <main>
         <section class="hero">
+            <div class="container">
             <h1 class="title-hero">Effective Solutions for Your Business</h1>
             <button class="button-hero" type="button">Order Service</button>
+            </div>
         </section>
         <section class="about">
             <div class="container">
@@ -110,8 +112,10 @@
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="footer-logo link" href="./index.html"><span class="footer-partlogo">Web</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
