--- a/portfolio.html
+++ b/portfolio.html
@@ -49,56 +49,58 @@
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio1.jpg" alt="bankapp" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-                <p class="portfolio-text">App</p> </a></div>
+                <p class="portfolio-text">App</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Cashless Payment</h2>
-                <p class="portfolio-text">Marketing</p></a></div>
+                <p class="portfolio-text">Marketing</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio3.jpg" alt="netbook" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Meditaion App</h2>
-                <p class="portfolio-text">App</p></a></div>
+                <p class="portfolio-text">App</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio4.jpg" alt="Taxi Service" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Taxi Service</h2>
-                <p class="portfolio-text">Marketing</p></a></div>
+                <p class="portfolio-text">Marketing</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio5.jpg" alt="phone" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Screen Illustrations</h2>
-                <p class="portfolio-text">Design</p></a></div>
+                <p class="portfolio-text">Design</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio6.jpg" alt="woman" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Online Courses</h2>
-                <p class="portfolio-text">Marketing</p></a></div>
+                <p class="portfolio-text">Marketing</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio7.jpg" alt="Instagram Stories" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-                <p class="portfolio-text">Design</p></a></div>
+                <p class="portfolio-text">Design</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio8.jpg" alt="food" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Organic Food</h2>
-                <p class="portfolio-text">Web Site</p></a></div>
+                <p class="portfolio-text">Web Site</p></div></a>
             </li>
             <li class="portfolio-item">
                 <a class="portfolio-link link" href=""><img src="./images/portfolio9.jpg" alt="cup of coffee" width="360">
                 <div class="part-card"><h2 class="portfolio-subtitle">Fresh Coffee</h2>
-                <p class="portfolio-text">Web Site</p></a></div>
+                <p class="portfolio-text">Web Site</p></div></a>
             </li>
         </ul>
         </div>
         </section>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="footer-logo link" href="./index.html"><span class="footer-partlogo">Web</span>Studio</a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
             solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
